Uploaded by https://stackedit.io/

--- a/_posts/2018-05-09-birthday.md
+++ b/_posts/2018-05-09-birthday.md
@@ -23,7 +23,8 @@ The expectations that have humourlessly ruled me for a good long while have all 
 <p>It’s just kind of hard, since I find myself so bloody boring.</p>
 <p>But do I really? If I actually found myself boring, wouldn’t I want to get out there and meet less boring humans? Instead of sitting at home and masturbating and reading and writing. (mostly masturbating, though.)<br>
 Since it’s likely that I actually find myself really interesting, I have to take that into account when building a representative picture of myself.</p>
-<p>So,</p>
+<p>So,<br>
+{: .mdl-data-table .mdl-js-data-table}</p>
 
 <table>
 <thead>
