--- a/_posts/2018-05-09-birthday.md
+++ b/_posts/2018-05-09-birthday.md
@@ -24,7 +24,7 @@ The expectations that have humourlessly ruled me for a good long while have all 
 <p>But do I really? If I actually found myself boring, wouldn’t I want to get out there and meet less boring humans? Instead of sitting at home and masturbating and reading and writing. (mostly masturbating, though.)<br>
 Since it’s likely that I actually find myself really interesting, I have to take that into account when building a representative picture of myself.</p>
 <p>So,</p>
-<p>{:.mdl-data-table}</p>
+<p>{: .mdl-data-table }</p>
 
 <table>
 <thead>
@@ -61,7 +61,8 @@ Since it’s likely that I actually find myself really interesting, I have to ta
 <td>meek to the point of character flaw, put on a face for unfamiliar people that is often rude</td>
 </tr>
 </tbody>
-</table><p>There’s definitely something here. Even material for a caricature, I’m almost certain.</p>
+</table><p>{: .mdl-data-table }</p>
+<p>There’s definitely something here. Even material for a caricature, I’m almost certain.</p>
 <blockquote>
 <p>Written with <a href="https://stackedit.io/">StackEdit</a>.</p>
 </blockquote>
